[gd_scene load_steps=11 format=3 uid="uid://d1cbkidjpwlj2"]

[ext_resource type="Script" path="res://scenes/ui/setting_menu.gd" id="1_8vr4a"]
[ext_resource type="Texture2D" uid="uid://dn3kvp5esi4rr" path="res://assets/textures/icons/speaker.png" id="2_2q1hs"]
[ext_resource type="Texture2D" uid="uid://whrrinl8cnuj" path="res://assets/textures/icons/full_screen.png" id="2_rxhah"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcnfv"]
bg_color = Color(0, 0, 0, 0.705882)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xsfgx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uai8i"]

[sub_resource type="Animation" id="Animation_jxcnp"]
resource_name = "Enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-400, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1iill"]
resource_name = "Exit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-400, 0)]
}

[sub_resource type="Animation" id="Animation_ndqi4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/ColorRect/VBoxContainer/UpBox/SoundsButton:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-400, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bahpr"]
_data = {
"Enter": SubResource("Animation_jxcnp"),
"Exit": SubResource("Animation_1iill"),
"RESET": SubResource("Animation_ndqi4")
}

[node name="SettingMenu" type="CanvasLayer"]
script = ExtResource("1_8vr4a")
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="Background" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wcnfv")
theme_override_styles/hover = SubResource("StyleBoxFlat_wcnfv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wcnfv")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wcnfv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xsfgx")

[node name="ColorRect" type="ColorRect" parent="Background"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = -400.0
offset_bottom = 648.0
color = Color(0.223529, 0.243137, 0.27451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpBox" type="HBoxContainer" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="FullScreenButton" type="Button" parent="Background/ColorRect/VBoxContainer/UpBox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uai8i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uai8i")
icon = ExtResource("2_rxhah")
flat = true

[node name="SoundsButton" type="Button" parent="Background/ColorRect/VBoxContainer/UpBox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uai8i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uai8i")
icon = ExtResource("2_2q1hs")
flat = true
text_overrun_behavior = 3

[node name="DownBox" type="HBoxContainer" parent="Background/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LangBox" type="VBoxContainer" parent="Background/ColorRect/VBoxContainer/DownBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Background/ColorRect/VBoxContainer/DownBox/LangBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Language"
horizontal_alignment = 1

[node name="LangSelector" type="OptionButton" parent="Background/ColorRect/VBoxContainer/DownBox/LangBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
focus_mode = 0
clip_text = true
item_count = 3
selected = 0
popup/item_0/text = "简体中文"
popup/item_0/id = 0
popup/item_1/text = "繁體中文"
popup/item_1/id = 1
popup/item_2/text = "English"
popup/item_2/id = 2

[node name="EffectBox" type="VBoxContainer" parent="Background/ColorRect/VBoxContainer/DownBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Background/ColorRect/VBoxContainer/DownBox/EffectBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Effect"
horizontal_alignment = 1

[node name="EffectSelector" type="OptionButton" parent="Background/ColorRect/VBoxContainer/DownBox/EffectBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
focus_mode = 0
clip_text = true
item_count = 3
selected = 0
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "CRT"
popup/item_1/id = 1
popup/item_2/text = "Gray"
popup/item_2/id = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bahpr")
}

[node name="SoundPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["sound"]]

[connection signal="button_down" from="Background" to="." method="_on_background_button_down"]
[connection signal="button_down" from="Background/ColorRect/VBoxContainer/UpBox/FullScreenButton" to="." method="_on_full_screen_button_button_down"]
[connection signal="button_down" from="Background/ColorRect/VBoxContainer/UpBox/SoundsButton" to="." method="_on_sounds_button_button_down"]
[connection signal="item_selected" from="Background/ColorRect/VBoxContainer/DownBox/LangBox/LangSelector" to="." method="_on_lang_selector_item_selected"]
[connection signal="item_selected" from="Background/ColorRect/VBoxContainer/DownBox/EffectBox/EffectSelector" to="." method="_on_effect_selector_item_selected"]
